--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "apollo-boost": "^0.1.27",
     "graphql": "^14.1.1",
+    "moment": "^2.24.0",
     "vue": "^2.5.22",
     "vue-apollo": "^3.0.0-beta.28",
     "vue-router": "^3.0.1",
